syntax = "proto3";
package api;

import "common/datapoint.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/thingspect/api/go/api";

// DataPointService contains functions to create and query data points.
service DataPointService {
  // Publish data points.
  rpc PublishDataPoints(PublishDataPointsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/datapoints"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "202"
        value: {
          description: "A successful response."
          schema: {}
        }
      }
    };
  }

  // List latest data point for each of a device's attributes.
  rpc LatestDataPoints(LatestDataPointsRequest) returns (LatestDataPointsResponse) {
    option (google.api.http) = {
      get: "/v1/datapoints/latest"
    };
  }
}

// PublishDataPointsRequest is sent to publish data points.
message PublishDataPointsRequest {
  // Data point array to publish.
  repeated common.DataPoint points = 1 [(validate.rules).repeated.min_items = 1, (google.api.field_behavior) = REQUIRED];
}

// LatestDataPointsRequest is sent to list latest device data points.
message LatestDataPointsRequest {
  // Identifier.
  oneof id_oneof {
    option (validate.required) = true;

    // Device unique ID.
    string uniq_id = 1 [json_name = "uniqID"];

    // Device ID (UUID).
    string dev_id = 2 [json_name = "devID"];
  }
}

// LatestDataPointsResponse is sent in response to a device latest list.
message LatestDataPointsResponse {
  // Data point array.
  repeated common.DataPoint points = 1;
}
