syntax = "proto3";
package common;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/thingspect/api/go/common";

// DataPoint represents a data point as stored in the database.
message DataPoint {
  // Device unique ID. Will be ignored during data ingest if provided as part of
  // the topic.
  string uniq_id = 1 [json_name = "uniqID"];

  // Device attribute.
  string attr = 2;

  // Attribute value.
  oneof val_oneof {
    // Integer value, 64-bit.
    sint64 int_val = 3;

    // Float value, 64-bit.
    double fl64_val = 4;

    // String value.
    string str_val = 5;

    // Boolean value.
    bool bool_val = 6;

    // Bytes value.
    bytes bytes_val = 16;
  }

  // Timestamp. If not present during data ingest, the current time will be
  // used.
  google.protobuf.Timestamp ts = 7;

  // Authentication token (UUID). Only used during data ingest. Will be ignored
  // if provided as part of the Payload message.
  string token = 8;

  // Trace ID (UUID). Assigned by the platform, will be ignored if provided
  // during data ingest.
  string trace_id = 9;
}
